[metadata]
name = fiservai
version = 1.0.0
author = Fiserv
description = A Python package for integrating with the Fiserv AI API
url = https://gitlab.com/codasteroid/basicpkg

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    openai
    requests
    python-dotenv

[options.packages.find]
where = src